Don't catch Exception when only CCE is thrown; Boolean.valueOf() is better than new Boolean()
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbcp/trunk@883394 13f79535-47bb-0310-9956-ffa450edef68